--- a/etc/postgresql/pg_cli_linuxbuh.conf
+++ b/etc/postgresql/pg_cli_linuxbuh.conf
@@ -1,10 +1,22 @@
+#версия PostgreSQL
 POSTGRESQLVER="9.6"
+#Путь до баз
 POSTGRESQLPATH="/var/lib/postgresql/$POSTGRESQLVER"
+#путь до архива базы на запись на архивном сервере
 SERVERBACKUPPATHWALBASE="/server/win/backupsql"
+#путь до wal архива на запись на архивном сервере
 SERVERBACKUPPATHWAL="/server/win/backupsql/wal_backup"
+#путь до архива базы на чтение на архивном сервере
 SERVERBACKUPPATHWALBASE1="/server/win/backupsql2"
+#путь до архива wal на чтение на архивном сервере
 SERVERBACKUPPATHWAL1="/server/win/backupsql2/wal_backup"
+#путь до архива базы на запись на локальном сервере
 LOCALWALBASE="backup/basebackups"
+#путь до архива wal на запись на локальном сервере
 LOCALWAL="backup/arhiv"
+#Порт который меняем в файле postgresql.example.conf
 SEDCREATEBASEPORT=5435
+#База которую меняем в файле postgresql.example.conf
 SEDCREATEBASENAME=buh
+#Параметр с именем хоста
+HOSTNAME=`hostname`
